增加等候区后台列表页面

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -23,6 +23,7 @@
         <span><a href="/home/queue/list?ck=04" target="_blank">「棒线」</a></span>
         <span><a href="/home/queue/list?ck=05" target="_blank">「铜排」</a></span>
         <span><a href="/home/queue/allList" target="_blank">「全部仓库」</a></span>
+        <span><a href="/home/wait/list" target="_blank">「等待区」</a></span>
         <hr>
         <span>仓库排队概览>></span>
         <span><a href="/home/queue/status" target="_blank">「查看」</a></span>
