修复未关注公众号用户提醒

--- a/Application/Home/View/wait/list.html
+++ b/Application/Home/View/wait/list.html
@@ -202,6 +202,7 @@
                     if (data.Result == "1") {
                         alert(data.Data.Message);
                     } else {
+                        alert(data.Data.Message);
                         console.log("操作失败")
                     }
                 }
