--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -24,6 +24,7 @@
         <span><a href="/home/queue/list?ck=05" target="_blank">「铜排」</a></span>
         <span><a href="/home/queue/allList" target="_blank">「全部仓库」</a></span>
         <span><a href="/home/wait/list" target="_blank">「等待区」</a></span>
+        <span><a href="http://192.168.1.92:8080/WebReport/ReportServer?reportlet=OA%2FSWFWB%2FOA_SWFWB_CKPD_S3_001_V.cpt" target="_blank">「数据报表」</a></span>
         <hr>
         <span>仓库排队概览>></span>
         <span><a href="/home/queue/status" target="_blank">「查看」</a></span>
