--- a/Application/Home/View/queue/index.html
+++ b/Application/Home/View/queue/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="gzh-qr-code">
                 <span>扫描二维码，绑定车辆信息↓</span>
-                <img style="width:100%; height:auto;" src="http://wxpusher.zjiecode.com/api/qrcode/mWPNEfMxu8W4phi0ctXvkKPWjVqWjtGwZNQDb2z2upPWgyJvvoLIQV3OiakVaTZB.jpg">
+                <img style="width:100%; height:auto;" src="/Public/img/showqrcode.jpg">
             </div>
         </div>
     </div>
