增加杭州湾电材及页面显示修改

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -15,6 +15,7 @@
         <span><a href="/home/queue?ck=03" target="_blank">「电材」</a></span>
         <span><a href="/home/queue?ck=04" target="_blank">「棒线」</a></span>
         <span><a href="/home/queue?ck=05" target="_blank">「铜排」</a></span>
+        <span><a href="/home/queue?ck=06" target="_blank">「杭州湾电材」</a></span>
         <hr>
         <span>后台入口>></span>
         <span><a href="/home/queue/list?ck=01" target="_blank">「铜管|铜带|铜板」</a></span>
@@ -22,6 +23,7 @@
         <span><a href="/home/queue/list?ck=03" target="_blank">「电材」</a></span>
         <span><a href="/home/queue/list?ck=04" target="_blank">「棒线」</a></span>
         <span><a href="/home/queue/list?ck=05" target="_blank">「铜排」</a></span>
+        <span><a href="/home/queue/list?ck=06" target="_blank">「杭州湾电材」</a></span>
         <span><a href="/home/queue/allList" target="_blank">「全部仓库」</a></span>
         <span><a href="/home/wait/list" target="_blank">「等待区」</a></span>
         <span><a href="http://192.168.1.92:8080/WebReport/ReportServer?reportlet=OA%2FSWFWB%2FOA_SWFWB_CKPD_S3_001_V.cpt" target="_blank">「数据报表」</a></span>
