--- a/Application/Home/View/queue/alllist.html
+++ b/Application/Home/View/queue/alllist.html
@@ -66,8 +66,10 @@
                         <td>电材</td>
                     <elseif condition="$queue.ck eq 04" /> 
                         <td>棒线</td>
-                    <else />
+                    <elseif condition="$queue.ck eq 05" /> 
                         <td>铜排</td>
+                    <else />
+                        <td>杭州湾电材</td>
                     </if>
                 </tr>
             </foreach>
